ajout commentaire Web Client core

--- a/web-client-core-asp.net/Views/Question/Index.cshtml
+++ b/web-client-core-asp.net/Views/Question/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Quiz - Question";
 }
-
+<!-- formulaire de saisie de question -->
 <form asp-controller="Question" asp-action="Validate" method="post">
     Title:  <input asp-for="Title" /> <br />
 
