--- a/web-client-core-asp.net/Views/Home/Index.cshtml
+++ b/web-client-core-asp.net/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Quiz - Home";
 }
 
+<!-- formulaire de saisie d'un quizz -->
 <form asp-controller="Home" asp-action="Validate" method="post">
     Title:  <input asp-for="Title" /> <br />
     Description: <input asp-for="Description" /><br />
