--- a/web-client-core-asp.net/src/WebClientCore/Views/Home/Index.cshtml
+++ b/web-client-core-asp.net/src/WebClientCore/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Quiz - Home";
 }
-
+<!--Formulaire pour l'ajout d'un quiz-->
 <form asp-controller="Home" asp-action="Validate" method="post">
     Title:  <input asp-for="Title" /> <br />
     Description: <input asp-for="Description" /><br />
