--- a/web-client-core-asp.net/src/WebClientCore/Views/Question/Index.cshtml
+++ b/web-client-core-asp.net/src/WebClientCore/Views/Question/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Quiz - Question";
 }
-
+<!--Formulaire pour l'ajout d'une question-->
 <form asp-controller="Question" asp-action="Validate" method="post">
     Title:  <input asp-for="Title" /> <br />
 
