--- a/WinPhone/App2/Quiz_Play.xaml
+++ b/WinPhone/App2/Quiz_Play.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="App2.Quiz_Play"
+    x:Class="ESAIP_Quiz.Quiz_Play"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:App2"
+    xmlns:local="using:ESAIP_Quiz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -10,7 +10,7 @@
 
     <Grid>
         <TextBox x:Name="Question" HorizontalAlignment="Left" Height="48" Margin="39,55,0,0" TextWrapping="Wrap" Text="Question : Intitulé de la question" 
-                 VerticalAlignment="Top" Width="318" TextChanged="TextBox_TextChanged"/>
+                 VerticalAlignment="Top" Width="318"/>
         <Button x:Name="Valider" Content="Valider" HorizontalAlignment="Left" Margin="38.856,485.822,0,0" VerticalAlignment="Top" 
                 RenderTransformOrigin="0.5,0.5" Height="56.328" UseLayoutRounding="False" Width="312.136" d:LayoutRounding="Auto" 
                 Click="Button_Click">
