--- a/WinPhone/App2/MainPage.xaml
+++ b/WinPhone/App2/MainPage.xaml
@@ -13,13 +13,14 @@
                  VerticalAlignment="Top" Width="318" TextChanged="TextBox_TextChanged"/>
         <Button x:Name="Valider" Content="Valider" HorizontalAlignment="Left" Margin="38.856,485.822,0,0" VerticalAlignment="Top" 
                 RenderTransformOrigin="0.5,0.5" Height="56.328" UseLayoutRounding="False" Width="312.136" d:LayoutRounding="Auto" 
-                Click="Button_Click">
+                Click="Valider_Click">
         </Button>
         <StackPanel x:Name="panel" Orientation="Vertical" Margin="0,155,0,184">
             <RadioButton x:Name="reponse1" IsChecked="True" Content="Réponse 1"/>
             <RadioButton x:Name="reponse2" Content="Réponse 2"/>
             <RadioButton x:Name="reponse3" Content="Réponse 3"/>
             <RadioButton x:Name="reponse4" Content="Réponse 4"/>
+            <Image x:Name="image" Height="84" Margin="0,0,292,0"/>
         </StackPanel>
     </Grid>
 </Page>
