fix: correction d'erreurs
Correction des erreurs empêchant le projet de se build.

--- a/WinPhone/App2/Quiz_Play.xaml
+++ b/WinPhone/App2/Quiz_Play.xaml
@@ -10,7 +10,7 @@
 
     <Grid>
         <TextBox x:Name="Question" HorizontalAlignment="Left" Height="48" Margin="39,55,0,0" TextWrapping="Wrap" Text="Question : Intitulé de la question" 
-                 VerticalAlignment="Top" Width="318" TextChanged="TextBox_TextChanged"/>
+                 VerticalAlignment="Top" Width="318" />
         <Button x:Name="Valider" Content="Valider" HorizontalAlignment="Left" Margin="38.856,485.822,0,0" VerticalAlignment="Top" 
                 RenderTransformOrigin="0.5,0.5" Height="56.328" UseLayoutRounding="False" Width="312.136" d:LayoutRounding="Auto" 
                 Click="Button_Click">
