--- a/WinPhone/App2/MainPage.xaml
+++ b/WinPhone/App2/MainPage.xaml
@@ -11,16 +11,15 @@
     <Grid>
         <TextBox x:Name="Question" HorizontalAlignment="Left" Height="48" Margin="39,55,0,0" TextWrapping="Wrap" Text="Question : Intitulé de la question" 
                  VerticalAlignment="Top" Width="318" />
-        <Button x:Name="Valider" Content="Valider" HorizontalAlignment="Left" Margin="38.856,485.822,0,0" VerticalAlignment="Top" 
-                RenderTransformOrigin="0.5,0.5" Height="56.328" UseLayoutRounding="False" Width="312.136" d:LayoutRounding="Auto" 
-                Click="Valider_Click">
-        </Button>
+        <Button x:Name="Valider" Content="Valider" HorizontalAlignment="Left" Margin="39,568,0,0" VerticalAlignment="Top" 
+                RenderTransformOrigin="0.5,0.5" Height="56.328" Width="312" 
+                Click="Valider_Click"/>
         <StackPanel x:Name="panel" Orientation="Vertical" Margin="0,155,0,184">
             <RadioButton x:Name="reponse1" IsChecked="True" Content="Réponse 1"/>
             <RadioButton x:Name="reponse2" Content="Réponse 2"/>
             <RadioButton x:Name="reponse3" Content="Réponse 3"/>
             <RadioButton x:Name="reponse4" Content="Réponse 4"/>
-            <TextBox x:Name="txt1" Margin="0" TextWrapping="Wrap" Text="country" VerticalAlignment="Stretch"/>
+            <TextBox x:Name="txt1" Margin="0" TextWrapping="Wrap" Text="country" VerticalAlignment="Stretch" Height="168" />
         </StackPanel>
     </Grid>
 </Page>
