--- a/Frontend/WinPhone-Client/App2/MainPage.xaml
+++ b/Frontend/WinPhone-Client/App2/MainPage.xaml
@@ -9,18 +9,15 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-        <TextBox x:Name="Question" HorizontalAlignment="Left" Height="48" Margin="39,55,0,0" TextWrapping="Wrap" Text="Question : Intitulé de la question" 
+        <TextBox x:Name="Welcome" HorizontalAlignment="Left" Height="48" Margin="39,55,0,0" TextWrapping="Wrap" Text="Bienvenue sur notre application"
                  VerticalAlignment="Top" Width="318" />
-        <Button x:Name="Valider" Content="Valider" HorizontalAlignment="Left" Margin="38.856,485.822,0,0" VerticalAlignment="Top" 
-                RenderTransformOrigin="0.5,0.5" Height="56.328" UseLayoutRounding="False" Width="312.136" d:LayoutRounding="Auto" 
-                Click="Valider_Click">
+        <Button x:Name="Valider" Content="Valider" HorizontalAlignment="Left" Margin="39,426,0,0" VerticalAlignment="Top"
+                RenderTransformOrigin="0.5,0.5" Height="56.328" Width="312"
+                Click="Valider_Click"/>
+        <Button x:Name="PageSuivate" Content="Page Suivante" HorizontalAlignment="Left" Margin="38.856,485.822,0,0" VerticalAlignment="Top"
+                RenderTransformOrigin="0.5,0.5" Height="56.328" UseLayoutRounding="False" Width="312.136" d:LayoutRounding="Auto"
+                Click="Suivant_Click">
         </Button>
-        <StackPanel x:Name="panel" Orientation="Vertical" Margin="0,155,0,184">
-            <RadioButton x:Name="reponse1" IsChecked="True" Content="Réponse 1"/>
-            <RadioButton x:Name="reponse2" Content="Réponse 2"/>
-            <RadioButton x:Name="reponse3" Content="Réponse 3"/>
-            <RadioButton x:Name="reponse4" Content="Réponse 4"/>
-            <Image x:Name="image" Height="84" Margin="0,0,292,0"/>
-        </StackPanel>
+        <Image x:Name="image" Height="84" Margin="148,268,144,288"/>
     </Grid>
 </Page>
